--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -95,14 +95,15 @@
     <ClCompile Include="src\GameStateMgr.cpp" />
     <ClCompile Include="src\GameState_DontPeek.cpp" />
     <ClCompile Include="src\Highlighter.cpp" />
-    <ClCompile Include="src\Level 1.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Menu.cpp" />
     <ClCompile Include="src\Music.cpp" />
     <ClCompile Include="src\Pencil.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Sharpener.cpp" />
+    <ClCompile Include="src\Tutorial.cpp" />
     <ClCompile Include="src\Wall.cpp" />
+    <ClCompile Include="src\Win.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
@@ -124,13 +125,14 @@
     <ClInclude Include="src\GameStateMgr.h" />
     <ClInclude Include="src\GameState_DontPeek.h" />
     <ClInclude Include="src\Highlighter.h" />
-    <ClInclude Include="src\Level 1.h" />
     <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\Music.h" />
     <ClInclude Include="src\Pencil.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Sharpener.h" />
+    <ClInclude Include="src\Tutorial.h" />
     <ClInclude Include="src\Wall.h" />
+    <ClInclude Include="src\Win.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Desktop\drawings\Sharpener_Animation.png" />
