--- a/Don't Peek/DontPeek.vcxproj.filters
+++ b/Don't Peek/DontPeek.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClCompile Include="src\Tutorial.cpp">
       <Filter>Source\Levels\Code</Filter>
     </ClCompile>
+    <ClCompile Include="src\Credits.cpp">
+      <Filter>Source\Levels\Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Main.h">
@@ -133,6 +136,9 @@
       <Filter>Source\Levels\Header</Filter>
     </ClInclude>
     <ClInclude Include="src\Tutorial.h">
+      <Filter>Source\Levels\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Credits.h">
       <Filter>Source\Levels\Header</Filter>
     </ClInclude>
   </ItemGroup>
