win interface done - missing conditions from level

--- a/Don't Peek/DontPeek.vcxproj.filters
+++ b/Don't Peek/DontPeek.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="src\Credits.cpp">
       <Filter>Source\Levels\Code</Filter>
     </ClCompile>
+    <ClCompile Include="src\Lose.cpp">
+      <Filter>Source\Levels\Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Main.h">
@@ -139,6 +142,9 @@
       <Filter>Source\Levels\Header</Filter>
     </ClInclude>
     <ClInclude Include="src\Credits.h">
+      <Filter>Source\Levels\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Lose.h">
       <Filter>Source\Levels\Header</Filter>
     </ClInclude>
   </ItemGroup>
