--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="src\GameStateMgr.cpp" />
     <ClCompile Include="src\GameState_DontPeek.cpp" />
     <ClCompile Include="src\Highlighter.cpp" />
+    <ClCompile Include="src\Lose.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Menu.cpp" />
     <ClCompile Include="src\Music.cpp" />
@@ -129,6 +130,7 @@
     <ClInclude Include="src\GameStateMgr.h" />
     <ClInclude Include="src\GameState_DontPeek.h" />
     <ClInclude Include="src\Highlighter.h" />
+    <ClInclude Include="src\Lose.h" />
     <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\Music.h" />
     <ClInclude Include="src\Pencil.h" />
