--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="src\GameStateMgr.cpp" />
     <ClCompile Include="src\GameState_DontPeek.cpp" />
     <ClCompile Include="src\Highlighter.cpp" />
+    <ClCompile Include="src\Howtoplay.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Menu.cpp" />
     <ClCompile Include="src\Music.cpp" />
@@ -127,6 +128,7 @@
     <ClInclude Include="src\GameStateMgr.h" />
     <ClInclude Include="src\GameState_DontPeek.h" />
     <ClInclude Include="src\Highlighter.h" />
+    <ClInclude Include="src\Howtoplay.h" />
     <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\Music.h" />
     <ClInclude Include="src\Pencil.h" />
