--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -68,7 +68,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Alpha_EngineD.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Alpha_EngineD.lib;fmodL64_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -86,7 +86,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Alpha_Engine.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Alpha_Engine.lib;fmod64_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -114,6 +114,7 @@
     <ClInclude Include="src\Credits.h" />
     <ClInclude Include="src\Door.h" />
     <ClInclude Include="src\Eraser.h" />
+    <ClInclude Include="src\fmod.h" />
     <ClInclude Include="src\fmod.hpp" />
     <ClInclude Include="src\fmod_android.h" />
     <ClInclude Include="src\fmod_codec.h" />
@@ -122,9 +123,6 @@
     <ClInclude Include="src\fmod_dsp_effects.h" />
     <ClInclude Include="src\fmod_errors.h" />
     <ClInclude Include="src\fmod_output.h" />
-    <ClInclude Include="src\fmod_studio.h" />
-    <ClInclude Include="src\fmod_studio.hpp" />
-    <ClInclude Include="src\fmod_studio_common.h" />
     <ClInclude Include="src\GameStateList.h" />
     <ClInclude Include="src\GameStateMgr.h" />
     <ClInclude Include="src\GameState_DontPeek.h" />
