--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="src\Pencil.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Sharpener.cpp" />
+    <ClCompile Include="src\SplashScreen.cpp" />
     <ClCompile Include="src\Tutorial.cpp" />
     <ClCompile Include="src\Wall.cpp" />
     <ClCompile Include="src\Win.cpp" />
@@ -136,6 +137,7 @@
     <ClInclude Include="src\Pencil.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Sharpener.h" />
+    <ClInclude Include="src\SplashScreen.h" />
     <ClInclude Include="src\Tutorial.h" />
     <ClInclude Include="src\Wall.h" />
     <ClInclude Include="src\Win.h" />
