level select is complete

--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="src\Highlighter.cpp" />
     <ClCompile Include="src\HowToPlay2.cpp" />
     <ClCompile Include="src\Level 1.cpp" />
+    <ClCompile Include="src\Level Select.cpp" />
     <ClCompile Include="src\Lose.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Menu.cpp" />
@@ -134,6 +135,7 @@
     <ClInclude Include="src\Highlighter.h" />
     <ClInclude Include="src\HowToPlay2.h" />
     <ClInclude Include="src\Level 1.h" />
+    <ClInclude Include="src\Level Select.h" />
     <ClInclude Include="src\Lose.h" />
     <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\Music.h" />
