How to play is completed

--- a/Don't Peek/DontPeek.vcxproj.filters
+++ b/Don't Peek/DontPeek.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="src\Restart.cpp">
       <Filter>Source\Level\Code</Filter>
     </ClCompile>
+    <ClCompile Include="src\Rules.cpp">
+      <Filter>Source\Level\Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Main.h" />
@@ -165,6 +168,9 @@
       <Filter>Source\Level\Header</Filter>
     </ClInclude>
     <ClInclude Include="src\Restart.h">
+      <Filter>Source\Level\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Rules.h">
       <Filter>Source\Level\Header</Filter>
     </ClInclude>
   </ItemGroup>
