--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -110,6 +110,7 @@
     <ClCompile Include="src\Pencil.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Restart.cpp" />
+    <ClCompile Include="src\Rules.cpp" />
     <ClCompile Include="src\Sharpener.cpp" />
     <ClCompile Include="src\SplashScreen.cpp" />
     <ClCompile Include="src\Tutorial.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="src\Pencil.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Restart.h" />
+    <ClInclude Include="src\Rules.h" />
     <ClInclude Include="src\Sharpener.h" />
     <ClInclude Include="src\SplashScreen.h" />
     <ClInclude Include="src\Tutorial.h" />
