--- a/Don't Peek/DontPeek.vcxproj.filters
+++ b/Don't Peek/DontPeek.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="src\Rules.cpp">
       <Filter>Source\Level\Code</Filter>
     </ClCompile>
+    <ClCompile Include="src\Animation.cpp">
+      <Filter>Source\Interaction\Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Main.h" />
@@ -172,6 +175,9 @@
     </ClInclude>
     <ClInclude Include="src\Rules.h">
       <Filter>Source\Level\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Animation.h">
+      <Filter>Source\Interaction\Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
