--- a/Don't Peek/DontPeek.vcxproj.filters
+++ b/Don't Peek/DontPeek.vcxproj.filters
@@ -65,14 +65,14 @@
     <ClCompile Include="src\Level Select.cpp">
       <Filter>Source\Level\Code</Filter>
     </ClCompile>
-    <ClCompile Include="src\Restart.cpp">
-      <Filter>Source\Level\Code</Filter>
-    </ClCompile>
     <ClCompile Include="src\Rules.cpp">
       <Filter>Source\Level\Code</Filter>
     </ClCompile>
     <ClCompile Include="src\Animation.cpp">
       <Filter>Source\Interaction\Code</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Restart.cpp">
+      <Filter>Source\Level\Code</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -170,14 +170,17 @@
     <ClInclude Include="src\Level Select.h">
       <Filter>Source\Level\Header</Filter>
     </ClInclude>
-    <ClInclude Include="src\Restart.h">
-      <Filter>Source\Level\Header</Filter>
-    </ClInclude>
     <ClInclude Include="src\Rules.h">
       <Filter>Source\Level\Header</Filter>
     </ClInclude>
     <ClInclude Include="src\Animation.h">
       <Filter>Source\Interaction\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\loading.h">
+      <Filter>Source\Environment\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Restart.h">
+      <Filter>Source\Level\Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
